# aetherengine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/window/: CMakeLists.txt  main.cpp
include/Aether/: Aether.hpp  Engine.hpp  EngineError.hpp
src/: Aether.cpp  Engine.cpp  EngineError.cpp  aether.cpp
src/include/: Aether.hpp  Engine.hpp  EngineError.hpp  Logger.hpp
src/include/Aether/: Engine.hpp  EngineError.hpp  Logger.hpp  macro.hpp
